[package]
name = "ball-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = "0.10.1"
bevy_editor_pls = "0.4.0"
bevy_rapier3d = "0.21.0"
knuffel = "3.2.0"
miette = { version = "5.9.0", features = ["fancy"] }
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1.37"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
